--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 @import url("../styles/normalize.css");
+@import url("../scss/queries.scss");
 
 $width: 1920;
 
@@ -181,8 +182,10 @@ button a {
         &__child {
           width: 100%;
           height: 35 / $width * 100vw;
+
           a {
             line-height: 30 / $width * 100vw;
+            font-size: 14 / $width * 100vw;
             &::after {
               display: none;
             }
@@ -354,6 +357,7 @@ button a {
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 /**********SERVICES ****************/
 .section-services {
+  max-width: 1920 / $width * 100vw;
   background-image: url("../images/image-services.png");
 }
 .services {
@@ -383,7 +387,9 @@ button a {
   }
   &__gallery {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    //grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: 285 / $width * 100vw 285 / $width * 100vw 285 / $width * 100vw 285 / $width * 100vw;
+
     gap: 5 / $width * 100vw;
     padding-bottom: 102 / $width * 100vw;
     &__transform {
@@ -406,7 +412,7 @@ button a {
       &__content {
         font-family: Raleway;
         color: #000;
-        min-height: 60 / $width * 100vw;
+        height: 60 / $width * 100vw;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -416,6 +422,8 @@ button a {
         background-color: white;
         transition: all 0.4s;
         &__tag {
+          height: 30 / $width * 100vw;
+          width: 189 / $width * 100vw;
           display: block;
           font-family: raleway;
           font-weight: 700;
@@ -497,6 +505,7 @@ button a {
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 /**********FAVORITES ****************/
 .favorites {
+  max-width: 1920 / $width * 100vw;
   background: #f5f5f5;
   &__h {
     display: flex;
@@ -566,11 +575,12 @@ button a {
 
   &__img {
     position: absolute;
-    width: 285 / $width * 100vw;
     bottom: 0;
     z-index: 1;
     transition: 0.7s;
     img {
+      height: 268 / $width * 100vw;
+      width: 222 / $width * 100vw;
       display: inline-block;
       object-fit: contain;
     }
@@ -686,7 +696,8 @@ button a {
           font-weight: 600;
           font-size: 24 / $width * 100vw;
           line-height: 36 / $width * 100vw;
-          letter-spacing: 0.05em;
+          letter-spacing: 0 / $width * 100vw;
+          //letter-spacing: 0.05em;
         }
 
         &__stars {
@@ -711,7 +722,8 @@ button a {
       font-weight: 500;
       font-size: 23 / $width * 100vw;
       line-height: 36 / $width * 100vw;
-      letter-spacing: 0.05em;
+      letter-spacing: 0 / $width * 100vw;
+      //letter-spacing: 0.05em;
       text-align: center;
       color: #ffffff;
       text-shadow: 0 / $width * 100vw 0 / $width * 100vw 4 / $width * 100vw
