--- a/scss/queries.scss
+++ b/scss/queries.scss
@@ -2,731 +2,28 @@
 /* BELOW 1344px (Smaller desktops) */
 /**************************/
 
-@media (max-width: 1344px) {
-  .hero {
-    max-width: 120rem;
-  }
-
-  .heading-primary {
-    font-size: 4.4rem;
-  }
-
-  .gallery {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
+//@media (max-width: 1344px) {
 
 /**************************/
 /* BELOW 1200px (Landscape Tablets) */
 /**************************/
 
-@media (max-width: 1200px) {
-  html {
-    font-size: 56.25%;
-  }
-
-  .grid {
-    column-gap: 4.8rem;
-    row-gap: 6.4rem;
-  }
-
-  .heading-secondary {
-    font-size: 3.6rem;
-  }
-
-  .heading-tertiary {
-    font-size: 2.4rem;
-  }
-
-  .header {
-    padding: 0 3.2rem;
-  }
-
-  .main-nav-list {
-    gap: 3.2rem;
-  }
-
-  .hero {
-    gap: 4.8rem;
-  }
-
-  .testimonials-container {
-    padding: 9.6rem 3.2rem;
-  }
-}
+// @media (max-width: 1200px) {
 
 /**************************/
 /* BELOW 944px (Tablets) */
 /**************************/
 
-@media (max-width: 944px) {
-  html {
-    /* 8px / 16px = 0.5 = 50% */
-    font-size: 50%;
-  }
-
-  .hero {
-    grid-template-columns: 1fr;
-    padding: 0 8rem;
-    gap: 6.4rem;
-  }
-
-  .hero-text-box,
-  .hero-img-box {
-    text-align: center;
-  }
-
-  .hero-img {
-    width: 60%;
-  }
-
-  .delivered-meals {
-    justify-content: center;
-    margin-top: 3.2rem;
-  }
-
-  .logos img {
-    height: 2.4rem;
-  }
-
-  .step-number {
-    font-size: 7.4rem;
-  }
-
-  .meal-content {
-    padding: 2.4rem 3.2rem 3.2rem 3.2rem;
-  }
-
-  .section-testimonials {
-    grid-template-columns: 1fr;
-  }
-
-  .gallery {
-    grid-template-columns: repeat(6, 1fr);
-  }
-
-  .cta {
-    /* 3/5 = 60% + 2/5 = 40% */
-    grid-template-columns: 3fr 2fr;
-  }
-
-  .cta-form {
-    grid-template-columns: 1fr;
-  }
-
-  .btn--form {
-    margin-top: 1.2rem;
-  }
-
-  /* MOBILE NAVIGATION */
-  .btn-mobile-nav {
-    display: block;
-    z-index: 9999;
-  }
-
-  .main-nav {
-    background-color: rgba(255, 255, 255, 0.6);
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    transform: translateX(100%);
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.5s ease-in;
-
-    /* Hide navigation */
-    /* Allows NO transitions at all */
-    /* display: none; */
-
-    /* 1) Hide it visually */
-    opacity: 0;
-
-    /* 2) Make it unaccessible to mouse and keyboard */
-    pointer-events: none;
-
-    /* 3) Hide it from screen readers */
-    visibility: hidden;
-  }
-
-  .nav-open .main-nav {
-    opacity: 1;
-    pointer-events: auto;
-    visibility: visible;
-    transform: translateX(0);
-  }
-
-  .nav-open .icon-mobile-nav[name="close-outline"] {
-    display: block;
-  }
-
-  .nav-open .icon-mobile-nav[name="menu-outline"] {
-    display: none;
-  }
-
-  .main-nav-list {
-    flex-direction: column;
-    gap: 4.8rem;
-  }
-
-  .main-nav-link:link,
-  .main-nav-link:visited {
-    font-size: 3rem;
-  }
-}
+// @media (max-width: 944px) {
 
 /**************************/
 /* BELOW 704px (Smaller tablets) */
 /**************************/
 
-@media (max-width: 404px) {
-  .grid--3-cols,
-  .grid--4-cols {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  .diets {
-    grid-column: 1 / -1;
-    justify-self: center;
-  }
-
-  .heading-secondary {
-    margin-bottom: 4.8rem;
-  }
-
-  .pricing-plan {
-    width: 100%;
-  }
-
-  .grid--footer {
-    grid-template-columns: repeat(6, 1fr);
-  }
-
-  .logo-col,
-  .address-col {
-    grid-column: span 3;
-  }
-
-  .nav-col {
-    grid-row: 1;
-    grid-column: span 2;
-    margin-bottom: 3.2rem;
-  }
-}
+//@media (max-width: 404px) {
 
 /**************************/
 /* BELOW 544px (Phones) */
 /**************************/
 
-@media (max-width: 544px) {
-  .grid {
-    row-gap: 4.8rem;
-  }
-
-  .grid--2-cols,
-  .grid--3-cols,
-  .grid--4-cols {
-    grid-template-columns: 1fr;
-  }
-
-  .btn,
-  .btn:link,
-  .btn:visited {
-    padding: 2.4rem 1.6rem;
-  }
-
-  .section-hero {
-    padding: 2.4rem 0 6.4rem 0;
-  }
-
-  .hero {
-    padding: 0 3.2rem;
-  }
-
-  .hero-img {
-    width: 80%;
-  }
-
-  .logos img {
-    height: 1.2rem;
-  }
-
-  .step-img-box:nth-child(2) {
-    grid-row: 1;
-  }
-
-  .step-img-box:nth-child(6) {
-    grid-row: 5;
-  }
-
-  .step-img-box {
-    transform: translateY(2.4rem);
-  }
-
-  .testimonials {
-    grid-template-columns: 1fr;
-  }
-
-  .gallery {
-    grid-template-columns: repeat(4, 1fr);
-    gap: 1.2rem;
-  }
-
-  .cta {
-    grid-template-columns: 1fr;
-  }
-
-  .cta-text-box {
-    padding: 3.2rem;
-  }
-
-  .cta-img-box {
-    height: 32rem;
-    grid-row: 1;
-  }
-}
-
-/* 
-  - Font sizes (px)
-  10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-  
-  - Spacing system (px)
-  2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-  */
-
-/*Fixing flexbox gap property missing in some Safari versions*/
-
-.no-flexbox-gap .main-nav-list li:not(:last-child) {
-  margin-right: 4.8rem;
-}
-
-.no-flexbox-gap .list-item:not(:last-child) {
-  margin-bottom: 1.6rem;
-}
-
-.no-flexbox-gap .list-icon:not(:last-child) {
-  margin-right: 1.6rem;
-}
-
-.no-flexbox-gap .delivered-faces {
-  margin-right: 1.6rem;
-}
-
-.no-flexbox-gap .meal-attribute:not(:last-child) {
-  margin-bottom: 2rem;
-}
-
-.no-flexbox-gap .meal-icon {
-  margin-right: 1.6rem;
-}
-
-.no-flexbox-gap .footer-row div:not(:last-child) {
-  margin-right: 6.4rem;
-}
-
-.no-flexbox-gap .social-links li:not(:last-child) {
-  margin-right: 2.4rem;
-}
-
-.no-flexbox-gap .footer-nav li:not(:last-child) {
-  margin-bottom: 2.4rem;
-}
-
-@media (max-width: 75em) {
-  .no-flexbox-gap .main-nav-list li:not(:last-child) {
-    margin-right: 3.2rem;
-  }
-}
-
-@media (max-width: 59em) {
-  .no-flexbox-gap .main-nav-list li:not(:last-child) {
-    margin-right: 0;
-    margin-bottom: 4.8rem;
-  }
-}
-
-// 480
-@media only screen and (min-width: 480px) {
-  .first-screen {
-    &__text {
-      margin: 0 auto;
-      padding: 30px 0;
-      max-width: 450px;
-    }
-  }
-  ///////////////
-  .services {
-    &__row {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-
-      p {
-        max-width: 580px;
-      }
-    }
-  }
-}
-
-///768
-@media only screen and (min-width: 768px) {
-  .header {
-    &__row {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    &__adress {
-      display: block;
-      text-align: left;
-    }
-
-    &__logo {
-      flex-grow: 1;
-    }
-    &__work-time {
-      display: block;
-      text-align: right;
-    }
-
-    &__menu {
-      &--have-menu,
-      .menu-item-has-children {
-        &::after {
-          content: "";
-          right: 40%;
-        }
-      }
-    }
-  }
-
-  .first-screen {
-    &__body {
-      max-width: 616px;
-      min-height: 600px;
-    }
-
-    &__text {
-      padding: 30px 0;
-      max-width: 450px;
-    }
-
-    &__btn {
-      a:hover {
-        color: #4b4b4b;
-      }
-    }
-  }
-
-  .video {
-    &__text,
-    &__player {
-      margin: 33px auto;
-    }
-    &__text,
-    &__player {
-      max-width: 535px;
-    }
-
-    &__player {
-      width: 565px;
-    }
-  }
-
-  .subscribe {
-    &__body {
-      max-width: 851px;
-      margin: 0 auto;
-    }
-
-    &__row {
-      margin: 0 auto;
-      max-width: 700px;
-
-      input {
-        padding: 16px 240px 16px 30px;
-      }
-      button {
-        &:hover {
-          color: #4b4b4b;
-        }
-      }
-    }
-  }
-
-  .footer {
-    &__widgets {
-      display: flex;
-      justify-content: space-evenly;
-      flex-wrap: wrap;
-    }
-  }
-
-  .widget {
-    flex: 0 1 40%;
-    &__socials {
-      justify-content: flex-start;
-    }
-  }
-}
-
-//1024
-@media only screen and (min-width: 1024px) {
-  .header {
-    &__container {
-      margin: 0 auto;
-      max-width: 1920px;
-    }
-
-    &__navigation {
-      max-width: 1250px;
-      margin: 0 auto;
-    }
-  }
-
-  .services {
-    &__row {
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: flex-start;
-
-      p {
-        max-width: 580px;
-      }
-    }
-  }
-
-  .card {
-    &__body {
-      &:hover {
-        .card__title {
-          background-position: right 10px center;
-        }
-        .card__img {
-          img {
-            transform: scale(1.05);
-          }
-        }
-      }
-    }
-  }
-
-  .video {
-    &__body {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 93px 0;
-    }
-
-    &__text {
-      max-width: 535px;
-      margin: 0 5px;
-    }
-
-    &__player {
-      margin: 0;
-      width: 565px;
-    }
-  }
-
-  .testimonial {
-    &__body {
-      max-width: 1000px;
-      margin: 0 auto;
-      text-align: center;
-    }
-
-    &__head {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    &__stars {
-      text-align: left;
-    }
-
-    &__img {
-      margin: 0 20px;
-    }
-  }
-
-  .footer {
-    &__widgets {
-      justify-content: space-between;
-    }
-
-    &__copyright {
-      min-height: 56px;
-    }
-
-    &__row {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    &__body {
-      &--right {
-        text-align: right;
-      }
-    }
-  }
-  .widget {
-    flex-basis: auto;
-
-    &__body {
-      &--right {
-        text-align: right;
-      }
-    }
-
-    &__socials {
-      justify-content: flex-end;
-    }
-  }
-}
-//1280
-@media only screen and (min-width: 1280px) {
-  .wrapper {
-    background-color: #fff;
-    max-width: $max-width-wrapper;
-    margin: 0 auto;
-  }
-
-  .container,
-  .container-large {
-    margin: 0 auto;
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .container {
-    max-width: $max-width-container;
-  }
-
-  .container-large {
-    max-width: $max-width-container-large;
-  }
-
-  .header {
-    &__input,
-    &__lines {
-      display: none;
-    }
-
-    &__navigation {
-      max-width: 1250px;
-      margin: 0 auto;
-    }
-
-    &__menu {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      min-height: 60px;
-      font-size: 16px;
-      li {
-        margin-right: 28px;
-        display: flex;
-        align-items: center;
-        border: none;
-      }
-      a {
-        margin-right: 8px;
-
-        &::before {
-          content: "";
-          position: absolute;
-          bottom: 10px;
-          width: 0%;
-          height: 2px;
-          background: #ffd401;
-          transition: width 0.4s;
-        }
-        &:hover {
-          &::before {
-            content: "";
-            position: absolute;
-            bottom: 10px;
-            width: 100%;
-            height: 2px;
-            background: #ffd401;
-          }
-        }
-      }
-
-      &--active {
-        a {
-          &::before {
-            content: "";
-            position: absolute;
-            bottom: 10px;
-            width: 40%;
-            height: 2px;
-            background: #ffd401;
-          }
-        }
-      }
-
-      &--have-menu,
-      .menu-item-has-children {
-        cursor: pointer;
-
-        a {
-          padding-right: 16px;
-          margin-right: 8px;
-          background-size: 8px;
-          background-position: center right;
-        }
-      }
-    }
-
-    &__sub-menu,
-    .sub-menu {
-      display: none;
-      max-width: unset;
-      padding: 10px 20px 0;
-      position: absolute;
-      top: 57px;
-      border-radius: 5px;
-      z-index: 120;
-
-      li {
-        margin: 0 0 10px 0;
-      }
-
-      a,
-      a:hover {
-        &::before,
-        &::after {
-          content: "";
-          width: 0px;
-          height: 0px;
-        }
-      }
-      a {
-        transition: 0.7s;
-        &:hover {
-          color: #ffd401;
-        }
-      }
-    }
-
-    &__all-menu {
-      position: static;
-      padding: 0;
-      opacity: 1; /////////////
-      width: auto; //////////////
-      border-top: none;
-      overflow-y: visible;
-    }
-  }
-}
+//@media (max-width: 544px) {
