--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,5 @@
 @import url("../styles/normalize.css");
+@import url("../scss/queries.scss");
 html {
   overflow-x: hidden;
 }
@@ -179,6 +180,7 @@ button a {
 }
 .dropdown .header__wrapper-bottom .header__main-list__submenu__child a {
   line-height: 1.5625vw;
+  font-size: 0.7291666667vw;
 }
 .dropdown .header__wrapper-bottom .header__main-list__submenu__child a::after {
   display: none;
@@ -331,6 +333,7 @@ button a {
 
 /**********SERVICES ****************/
 .section-services {
+  max-width: 100vw;
   background-image: url("../images/image-services.png");
 }
 
@@ -362,7 +365,7 @@ button a {
 }
 .services__gallery {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: 14.84375vw 14.84375vw 14.84375vw 14.84375vw;
   gap: 0.2604166667vw;
   padding-bottom: 5.3125vw;
 }
@@ -387,7 +390,7 @@ button a {
 .services__gallery__transform__content {
   font-family: Raleway;
   color: #000;
-  min-height: 3.125vw;
+  height: 3.125vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -398,6 +401,8 @@ button a {
   transition: all 0.4s;
 }
 .services__gallery__transform__content__tag {
+  height: 1.5625vw;
+  width: 9.84375vw;
   display: block;
   font-family: raleway;
   font-weight: 700;
@@ -474,6 +479,7 @@ button a {
 
 /**********FAVORITES ****************/
 .favorites {
+  max-width: 100vw;
   background: #f5f5f5;
 }
 .favorites__h {
@@ -541,12 +547,13 @@ button a {
 }
 .tree__img {
   position: absolute;
-  width: 14.84375vw;
   bottom: 0;
   z-index: 1;
   transition: 0.7s;
 }
 .tree__img img {
+  height: 13.9583333333vw;
+  width: 11.5625vw;
   display: inline-block;
   object-fit: contain;
 }
@@ -655,7 +662,7 @@ button a {
   font-weight: 600;
   font-size: 1.25vw;
   line-height: 1.875vw;
-  letter-spacing: 0.05em;
+  letter-spacing: 0vw;
 }
 .response__hero__head__name__stars {
   display: flex;
@@ -676,7 +683,7 @@ button a {
   font-weight: 500;
   font-size: 1.1979166667vw;
   line-height: 1.875vw;
-  letter-spacing: 0.05em;
+  letter-spacing: 0vw;
   text-align: center;
   color: #ffffff;
   text-shadow: 0vw 0vw 0.2083333333vw rgba(0, 0, 0, 0.25);
