--- a/styles/queries.css
+++ b/styles/queries.css
@@ -536,7 +536,546 @@
 /* BELOW 944/ $width * 100vw (Tablets) */
 /**************************/
 @media (max-width: 944px) {
-  /* MOBILE NAVIGATION */
+  .container-min {
+    min-width: 86.2288135593vw;
+    margin: 0 auto;
+  }
+  .container-medium {
+    max-width: 91.1016949153vw;
+    margin: 0 auto;
+    padding-left: 1.0593220339vw;
+    padding-right: 1.0593220339vw;
+  }
+  .container-large {
+    max-width: 96.3983050847vw;
+    margin: 0 auto;
+  }
+  button a {
+    height: 2.1186440678vw;
+    width: 15.4661016949vw;
+  }
+  .btn {
+    font-size: 1.4830508475vw;
+    padding: 1.0593220339vw 3.1779661017vw;
+    border-radius: 15.8898305085vw;
+  }
+  /**********SECTION HEADER****************/
+  .header__wrapper-top {
+    padding: 2.1186440678vw 0 0;
+  }
+  .header__wrapper-top__row {
+    background-color: #921287;
+    padding-bottom: 2.1186440678vw;
+    max-width: 96.3983050847vw;
+    margin: 0 auto;
+  }
+  .header__wrapper-top__row__adress, .header__wrapper-top__row__work-time {
+    font-size: 1.4830508475vw;
+    line-height: 2.3728813559vw;
+  }
+  .header__wrapper-top__row__adress {
+    height: 4.6610169492vw;
+    width: 20.656779661vw;
+  }
+  .header__wrapper-top__row__work-time {
+    margin-top: 2.7542372881vw;
+    height: 4.6610169492vw;
+    width: 18.9618644068vw;
+  }
+  .header__wrapper-top__row__work-time__telephone, .header__wrapper-top__row__work-time__telephone a {
+    margin-top: 0.6355932203vw;
+    font-size: 2.1186440678vw;
+    line-height: 2.9661016949vw;
+  }
+  .header__wrapper-top__row__logo img {
+    height: 9.4279661017vw;
+    width: 20.1271186441vw;
+  }
+  .header__wrapper-top__row__logo p {
+    margin-top: 1.8008474576vw;
+    height: 1.4830508475vw;
+    width: 31.3559322034vw;
+    font-size: 1.2711864407vw;
+    line-height: 1.4925847458vw;
+  }
+  /********************************/
+  .dropdown {
+    max-width: 100vw;
+    top: 12.7118644068vw;
+    padding: 0.5296610169vw;
+    border: 0.2118644068vw solid #4caf50;
+    right: 0;
+  }
+  .dropdown.fixed {
+    left: 0;
+    top: 0;
+  }
+  .dropdown .header__wrapper-bottom .header__main-list {
+    width: 88.3474576271vw;
+    height: 2.1186440678vw;
+  }
+  .dropdown .header__wrapper-bottom .header__main-list__submenu {
+    left: 0;
+    width: 21.186440678vw;
+    margin-top: 0;
+    padding: 0.4237288136vw 2.1186440678vw;
+    transform: translate(-2.1186440678vw, 4.2372881356vw);
+    border-radius: 0.5296610169vw;
+  }
+  .dropdown .header__wrapper-bottom .header__main-list__submenu__child {
+    width: 100%;
+    height: 3.7076271186vw;
+  }
+  .dropdown .header__wrapper-bottom .header__main-list__submenu__child a {
+    line-height: 3.1779661017vw;
+    font-size: 1.4830508475vw;
+  }
+  .dropdown .header__wrapper-bottom .header__main-list__item {
+    margin-right: 3.813559322vw;
+  }
+  .dropdown .header__wrapper-bottom .header__main-list__item::before {
+    bottom: -0.5296610169vw;
+    width: 0%;
+    height: 0.2118644068vw;
+  }
+  .dropdown .header__wrapper-bottom .header__main-list__item:hover::before {
+    width: 100%;
+  }
+  .dropdown .header__wrapper-bottom .header__main-list__item:nth-child(1) {
+    margin-right: 4.1313559322vw;
+  }
+  .dropdown .header__wrapper-bottom .header__main-list__item:nth-child(2) {
+    margin-right: 4.7669491525vw;
+  }
+  .dropdown .header__wrapper-bottom .header__main-list__item:nth-child(2) a::after {
+    right: -0.2118644068vw;
+    height: 2.1186440678vw;
+    width: 2.1186440678vw;
+    background-size: 0.8474576271vw 0.6355932203vw;
+    transform: translateX(100%);
+  }
+  .dropdown .header__wrapper-bottom .header__main-list__item:nth-child(8) {
+    margin-right: 0;
+  }
+  .dropdown .header__wrapper-bottom ul li {
+    height: 2.1186440678vw;
+    margin-right: 0.5296610169vw;
+  }
+  .dropdown .header__wrapper-bottom ul li a img {
+    width: 1.906779661vw;
+    height: 2.1186440678vw;
+  }
+  .dropdown .header__wrapper-bottom ul li a {
+    font-size: 1.6949152542vw;
+    line-height: 2.1186440678vw;
+  }
+  .btn-mobile-nav img {
+    height: 5.0847457627vw;
+    width: 5.0847457627vw;
+  }
+  /**********SECTION HERO****************/
+  .section-hero {
+    max-width: 100vw;
+  }
+  .hero {
+    margin: 0 auto;
+    padding: 0 auto;
+  }
+  .hero__img-box__img {
+    height: 52.9661016949vw;
+    width: 67.7966101695vw;
+  }
+  .hero__text-box {
+    padding: 0 auto;
+  }
+  .hero__text-box__primary {
+    height: 12.5vw;
+    width: 37.0762711864vw;
+    line-height: 6.25vw;
+    font-size: 4.4491525424vw;
+    margin-left: 5.8262711864vw;
+    margin-top: 4.2372881356vw;
+    margin-bottom: 2.1186440678vw;
+  }
+  .hero__text-box__tag-title {
+    height: 2.1186440678vw;
+    width: 27.9661016949vw;
+    font-size: 1.906779661vw;
+    line-height: 2.1186440678vw;
+    margin-left: 5.8262711864vw;
+    margin-top: 2.1186440678vwx;
+  }
+  .hero__text-box__description {
+    height: 17.7966101695vw;
+    width: 36.0169491525vw;
+    margin-left: 5.8262711864vw;
+    margin-bottom: 3.4957627119vw;
+    margin-top: 1.0593220339vw;
+    font-size: 1.4830508475vw;
+    line-height: 2.5423728814vw;
+  }
+  .hero__text-box__btn {
+    margin-left: 5.8262711864vw;
+    padding: 1.2711864407vw 4.2372881356vw;
+  }
+  /**********QUALITY****************/
+  .mark-quality {
+    max-width: 100vw;
+    height: 15.8898305085vw;
+    padding: 0 auto;
+  }
+  .mark-quality__container__logos img {
+    height: 12.7118644068vw;
+    width: 30.7203389831vw;
+    margin-right: 3.7076271186vw;
+  }
+  /**********SERVICES ****************/
+  .section-services {
+    max-width: 100vw;
+  }
+  .services__text-box__first {
+    height: 6.6737288136vw;
+    width: 34.9576271186vw;
+    letter-spacing: -0.0529661017vw;
+    font-size: 4.6610169492vw;
+    line-height: 1.05;
+  }
+  .services__text-box__second {
+    background-color: #921287;
+    height: 10.1694915254vw;
+    width: 50.8474576271vw;
+    font-size: 1.4830508475vw;
+    margin-top: 9.4279661017vw;
+    margin-bottom: 6.3559322034vw;
+    line-height: 2.5423728814vw;
+  }
+  .services__gallery {
+    grid-template-columns: 30.1906779661vw 30.1906779661vw 30.1906779661vw;
+    gap: 0.5296610169vw;
+    padding-bottom: 10.8050847458vw;
+  }
+  .services__gallery__transform {
+    height: 27.5423728814vw;
+    width: 30.1906779661vw;
+  }
+  .services__gallery__transform__item img {
+    height: 21.186440678vw;
+    width: 30.1906779661vw;
+  }
+  .services__gallery__transform__content {
+    height: 6.3559322034vw;
+    padding-left: 2.1186440678vw;
+    padding-right: 2.436440678vw;
+  }
+  .services__gallery__transform__content__tag {
+    height: 3.1779661017vw;
+    width: 20.0211864407vw;
+    font-size: 1.6949152542vw;
+    line-height: 3.1779661017vw;
+  }
+  .services__gallery__transform__content img {
+    height: 2.5423728814vw;
+    width: 2.5423728814vw;
+  }
+  /**********VIDEO****************/
+  .section-video {
+    max-width: 100vw;
+    height: 82.6271186441vw;
+    background-size: cover;
+    margin-top: 0 auto;
+  }
+  .section-video .video {
+    flex-direction: column;
+  }
+  .section-video .video__text-box__primary {
+    width: 56.6737288136vw;
+    height: 5.5084745763vw;
+    font-size: 3.6016949153vw;
+    line-height: 1.05;
+    margin-top: 4.2372881356vw;
+  }
+  .section-video .video__text-box__paragraph {
+    height: 17.9025423729vw;
+    width: 56.6737288136vw;
+    margin-bottom: 3.1779661017vw;
+  }
+  .section-video .video__text-box__paragraph__description {
+    font-size: 1.6949152542vw;
+    line-height: 1.6;
+    margin-bottom: 2.1186440678vw;
+  }
+  .section-video .video__text-box__paragraph__description span {
+    font-size: 2.1186440678vw;
+  }
+  .section-video .video__text-box__btn {
+    margin-bottom: 3.1779661017vw;
+    padding: 1.0593220339vw 5.1906779661vw 1.0593220339vw 4.0254237288vw;
+  }
+  .section-video .video__img-box__video-img {
+    height: 31.25vw;
+    width: 55.6144067797vw;
+    border: 2.1186440678vw solid white;
+    margin-top: 1.0593220339vw;
+    margin-bottom: 4.2372881356vw;
+  }
+  .section-video .video__img-box__button-img {
+    bottom: 23.3050847458vw;
+    right: 48.7288135593vw;
+    height: 2.9661016949vw;
+    width: 1.906779661vw;
+  }
+  /**********FAVORITES ****************/
+  .favorites {
+    max-width: 100vw;
+  }
+  .favorites__h {
+    text-align: center;
+    margin-top: 6.3559322034vw;
+    margin-bottom: 2.1186440678vw;
+  }
+  .favorites__h h2 {
+    height: 5.5084745763vw;
+    width: 60.6991525424vw;
+    font-size: 3.6016949153vw;
+    line-height: 5.5084745763vw;
+  }
+  .favorites__box {
+    padding: 6.3559322034vw 1.0593220339vw 6.3559322034vw 10.593220339vw;
+    width: 79.4491525424vw;
+    height: 43.75vw;
+  }
+  .tree {
+    flex-shrink: 0;
+    margin-right: 1.0593220339vw;
+  }
+  .tree__primary {
+    height: 43.4322033898vw;
+    width: 30.1906779661vw;
+    border-radius: 1.0593220339vw;
+  }
+  .tree__primary h3 {
+    margin-top: 3.1779661017vw;
+    font-size: 2.3305084746vw;
+    line-height: 3.1779661017vw;
+    margin-bottom: 2.6483050847vw;
+  }
+  .tree__btn, .tree__btn a {
+    padding: 0 auto;
+    margin-bottom: 2.6483050847vw;
+  }
+  .tree__img {
+    bottom: 0;
+  }
+  .tree__img img {
+    height: 28.3898305085vw;
+    width: 30.1906779661vw;
+  }
+  .tree__hover {
+    flex-grow: 1;
+    margin-left: 3.1779661017vw;
+    margin-right: 3.1779661017vw;
+  }
+  .tree__hover p {
+    font-size: 1.4830508475vw;
+    line-height: 2.2245762712vw;
+  }
+  .tree__price {
+    margin-top: 0.7415254237vw;
+    flex-grow: 1;
+  }
+  .tree__price p:first-child {
+    line-height: 2.5423728814vw;
+  }
+  .tree__price p:last-child {
+    font-size: 2.1186440678vw;
+    line-height: 3.1779661017vw;
+  }
+  .sliders__prev,
+  .sliders__next {
+    width: 2.8601694915vw;
+    height: 2.8601694915vw;
+    transform: translate(-4.4491525424vw, -0.6355932203vw);
+  }
+  .sliders__next {
+    transform: rotate(180deg) translate(-72.0338983051vw, 0.6355932203vw);
+  }
+  /**********REVIEWS ****************/
+  .reviews {
+    height: 44.9152542373vw;
+  }
+  .reviews__body {
+    margin: 0 auto;
+    padding: 6.3559322034vw 0;
+  }
+  .response__hero {
+    margin: 0 auto;
+  }
+  .response__hero__head {
+    height: 10.593220339vw;
+    width: 37.9237288136vw;
+    margin-bottom: 4.2372881356vw;
+  }
+  .response__hero__head__img {
+    margin: 0 auto;
+    border-radius: 50%;
+    flex-shrink: 0;
+  }
+  .response__hero__head__img img {
+    width: 10.593220339vw;
+    height: 10.593220339vw;
+  }
+  .response__hero__head__name h3 {
+    margin-top: 1.6949152542vw;
+    margin-bottom: 0.7415254237vw;
+    font-size: 2.1186440678vw;
+    line-height: 3.813559322vw;
+    letter-spacing: 0vw;
+  }
+  .response__hero__head__name__stars {
+    margin-right: 1.0593220339vw;
+  }
+  .response__hero__head__name__stars img {
+    height: 2.1186440678vw;
+    width: 2.1186440678vw;
+    margin-right: 1.0593220339vw;
+  }
+  .response__hero__text {
+    max-width: 86.2288135593vw;
+    height: 15.2542372881vw;
+    margin-bottom: 3.1779661017vw;
+    font-weight: 500;
+    font-size: 1.906779661vw;
+    line-height: 3.813559322vw;
+    letter-spacing: 0vw;
+    text-shadow: 0vw 0vw 0.4237288136vw rgba(0, 0, 0, 0.25);
+  }
+  .reviews__prev,
+  .reviews__next {
+    width: 2.8601694915vw;
+    height: 2.8601694915vw;
+    transform: translate(4.2372881356vw, 13.9830508475vw);
+  }
+  .reviews__next {
+    transform: rotate(180deg) translate(-92.1610169492vw, 19.2796610169vw);
+  }
+  /**********FORMS ****************/
+  .forms {
+    max-width: 100vw;
+  }
+  .forms__body {
+    padding: 5.2966101695vw 0 6.3559322034vw 0;
+    min-width: 91.1016949153vw;
+  }
+  .forms__body h3 {
+    max-width: 90.1483050847vw;
+    height: 11.0169491525vw;
+    font-size: 3.6016949153vw;
+    margin-bottom: 5.2966101695vw;
+  }
+  .forms__body span {
+    font-size: 3.6016949153vw;
+  }
+  .forms__row {
+    min-width: 74.1525423729vw;
+    height: 5.7203389831vw;
+  }
+  .forms__row input {
+    width: 100%;
+    padding: 1.2711864407vw 0 1.2711864407vw 0;
+    border-radius: 2.9661016949vw;
+    font-size: 1.6949152542vw;
+    line-height: 2.3305084746vw;
+  }
+  .forms__row button {
+    height: 2.1186440678vw;
+    width: 11.6525423729vw;
+  }
+  .forms__btn {
+    font-size: 1.6949152542vw;
+    padding: 1.2711864407vw 6.3559322034vw;
+    border-radius: 14.8305084746vw;
+    right: 0;
+    top: 0;
+  }
+  /**********FOOTER ****************/
+  .footer {
+    margin-top: 2.8601694915vw;
+  }
+  .footer__widgets {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .footer .widget__info {
+    margin-bottom: 1.3771186441vw;
+    line-height: 2.7542372881vw;
+  }
+  .footer .widget__info h3 {
+    margin-bottom: 1.0593220339vw;
+    font-size: 1.4830508475vw;
+    line-height: 2.0127118644vw;
+  }
+  .footer .widget__info li {
+    font-size: 1.4830508475vw;
+    line-height: 3.7076271186vw;
+  }
+  .footer .widget__info p {
+    font-size: 1.4830508475vw;
+    line-height: 2.7542372881vw;
+    margin-bottom: 1.0593220339vw;
+  }
+  .footer .widget__info p:last-child {
+    margin-bottom: 0;
+    line-height: 2.3305084746vw;
+  }
+  .footer .widget__info a {
+    font-size: 1.4830508475vw;
+    line-height: 3.7076271186vw;
+  }
+  .footer .widget__info__telephone, .footer .widget__info__telephone a {
+    margin-bottom: 1.0593220339vw;
+    font-size: 2.1186440678vw;
+    line-height: 2.9661016949vw;
+    text-align: start;
+  }
+  .footer .widget__info--right {
+    margin-bottom: 0;
+    text-align: left;
+  }
+  .footer .widget__social-networks {
+    margin-top: 2.0127118644vw;
+    display: flex;
+    justify-content: left;
+  }
+  .footer .widget__social-networks__ithem {
+    flex-shrink: 0;
+    width: 4.2372881356vw;
+    height: 4.2372881356vw;
+    border-radius: 50%;
+  }
+  .footer .widget__social-networks__ithem:last-child {
+    margin-right: 0;
+  }
+  .footer .widget__social-networks__ithem img {
+    margin: 1.1652542373vw;
+    width: 1.906779661vw;
+    height: 1.906779661vw;
+    filter: brightness(0) invert(10);
+  }
+  .footer__copyright {
+    height: 5.9322033898vw;
+  }
+  .footer__copyright__text, .footer__copyright__text a {
+    margin-top: 1.5889830508vw;
+    height: 2.7542372881vw;
+    width: 22.4576271186vw;
+    font-size: 1.2711864407vw;
+    line-height: 2.7542372881vw;
+  }
+  .footer__copyright__terms, .footer__copyright__terms a {
+    margin-top: 1.5889830508vw;
+    font-size: 1.0593220339vw;
+    line-height: 2.1186440678vw;
+  }
   .btn-mobile-nav {
     display: block;
     z-index: 2000;
