--- a/styles/queries.css
+++ b/styles/queries.css
@@ -244,7 +244,6 @@
     display: flex;
     align-items: center;
     background: url("../images/icons/white-button.png") no-repeat right 1.4880952381vw center;
-    transition: 0.5s;
   }
   .services .gallery__content a {
     text-decoration: none;
@@ -755,6 +754,7 @@
     line-height: 2.5423728814vw;
   }
   .services .services__gallery {
+    display: grid;
     grid-template-columns: 30.1906779661vw 30.1906779661vw 30.1906779661vw;
     gap: 2.1186440678vw 1.0593220339vw;
     padding-bottom: 9.7457627119vw;
@@ -774,7 +774,6 @@
     width: 30.1906779661vw;
     height: 21.186440678vw;
     border-radius: 1.0593220339vw;
-    transition: 0.5s;
   }
   .services .gallery__img img:hover {
     transform: scale(1.1);
@@ -782,11 +781,10 @@
   .services .gallery__content {
     height: 6.3559322034vw;
     padding: 0 4.6610169492vw 0 2.1186440678vw;
-    display: flex;
-    align-items: center;
     background: url("../images/icons/white-button.png") no-repeat right 2.1186440678vw center;
   }
   .services .gallery__content a {
+    text-decoration: none;
     height: 3.1779661017vw;
     width: 20.0211864407vw;
     font-size: 1.6949152542vw;
@@ -1091,35 +1089,86 @@
     font-size: 1.0593220339vw;
     line-height: 2.1186440678vw;
   }
+  .btn-mobile-nav {
+    display: block;
+    z-index: 2000;
+  }
   .header__wrapper-bottom {
+    background-color: rgba(56, 102, 65, 0.853);
     -webkit-backdrop-filter: blur(1.0593220339vw);
     backdrop-filter: blur(1.0593220339vw);
+    position: absolute;
+    color: black;
     top: 0;
     left: 0;
     width: 100vw;
     height: 212.9237288136vw;
     transform: translateX(100%);
+    transition: all 0.5s ease-in;
+    /* Hide navigation */
+    /* Allows NO transitions at all */
+    /* display: none; */
+    /* 1) Hide it visually */
+    opacity: 0;
+    /* 2) Make it unaccessible to mouse and keyboard */
+    pointer-events: none;
+    /* 3) Hide it from screen readers */
+    visibility: hidden;
+  }
+  .nav-open .header__wrapper-bottom {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    transform: translateX(0);
+  }
+  .nav-open img[name=close-outline] {
+    display: block;
+  }
+  .nav-open img[name=menu-outline] {
+    display: none;
   }
   .dropdown {
+    font-family: Raleway;
+    background-color: #386641;
     max-width: 100vw;
     top: 12.7118644068vw;
     padding: 0.5296610169vw;
     border: 0.2118644068vw solid #4caf50;
+    font-weight: 600;
     right: 0;
+    z-index: 1000;
   }
   .dropdown.fixed {
+    position: fixed;
     left: 0;
     top: 0;
+    opacity: 0.9;
+  }
+  .dropdown .d-flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .dropdown .header__wrapper-bottom {
+    text-transform: uppercase;
   }
   .dropdown .header__wrapper-bottom .header__main-list {
     margin-top: 5.2966101695vw;
     margin-left: 5.2966101695vw;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
     width: 89.406779661vw;
     height: 116.5254237288vw;
+    z-index: 17;
   }
   .dropdown .header__wrapper-bottom .header__main-list__submenu {
+    position: absolute;
     width: 26.4830508475vw;
     height: 24.3644067797vw;
+    z-index: 18;
+    background-color: rgb(56, 102, 65);
+    display: none;
     padding: 0.4237288136vw 2.1186440678vw;
     transform: translate(19.0677966102vw, 1.0593220339vw);
     border-radius: 0.5296610169vw;
@@ -1132,16 +1181,23 @@
     line-height: 2.1186440678vw;
     font-size: 1.4830508475vw;
   }
+  .dropdown .header__wrapper-bottom .header__main-list__submenu__child a::after {
+    display: none;
+  }
   .dropdown .header__wrapper-bottom .header__main-list__item {
     height: 4.2372881356vw;
     margin-right: 3.813559322vw;
     margin-bottom: 2.1186440678vw;
   }
   .dropdown .header__wrapper-bottom .header__main-list__item::before {
+    content: "";
+    position: absolute;
     left: 0;
     bottom: -0.2118644068vw;
     width: 0%;
     height: 0.2118644068vw;
+    background: #ffd401;
+    transition: width 0.4s;
   }
   .dropdown .header__wrapper-bottom .header__main-list__item:hover::before {
     width: 100%;
@@ -1151,13 +1207,19 @@
   }
   .dropdown .header__wrapper-bottom .header__main-list__item:nth-child(2) {
     margin-right: 4.7669491525vw;
+    position: relative;
   }
   .dropdown .header__wrapper-bottom .header__main-list__item:nth-child(2) a::after {
+    content: "";
+    position: absolute;
     top: 0;
     right: -3.1779661017vw;
     height: 4.2372881356vw;
     width: 4.2372881356vw;
+    background-image: url("../images/icons/sub-menu_arrow.svg");
     background-size: 3.1779661017vw 2.1186440678vw;
+    background-position: center;
+    background-repeat: no-repeat;
     transform: translateX(100%);
   }
   .dropdown .header__wrapper-bottom .header__main-list__item:nth-child(8) {
@@ -1168,16 +1230,26 @@
   }
   .dropdown .header__wrapper-bottom ul li {
     height: 5.8262711864vw;
+    position: relative;
+    text-align: center;
+    align-self: center;
     margin-bottom: 0.5296610169vw;
   }
   .dropdown .header__wrapper-bottom ul li a img {
     width: 5.2966101695vw;
     height: 3.7076271186vw;
+    color: #fff;
     filter: brightness(0) invert(10);
   }
   .dropdown .header__wrapper-bottom ul li a {
     font-size: 2.7542372881vw;
     line-height: 5.2966101695vw;
+    color: #fff;
+    display: block;
+    text-decoration: none;
+  }
+  .dropdown .header__wrapper-bottom ul li:hover > ul {
+    display: initial;
   }
 }
 /**************************/
@@ -1407,6 +1479,7 @@
     line-height: 3.9772727273vw;
   }
   .services .services__gallery {
+    display: grid;
     grid-template-columns: 34.8011363636vw 34.8011363636vw;
     gap: 2.8409090909vw 1.4204545455vw;
     padding-bottom: 10.2272727273vw;
@@ -1433,6 +1506,8 @@
   .services .gallery__content {
     height: 5.6818181818vw;
     padding: 0 6.25vw 0 2.8409090909vw;
+    display: flex;
+    align-items: center;
     background: url("../images/icons/white-button.png") no-repeat right 2.8409090909vw center;
   }
   .services .gallery__content a {
@@ -1760,6 +1835,7 @@
   .dropdown.fixed {
     left: 0;
     top: 0;
+    opacity: 0.9;
   }
   .dropdown .header__wrapper-bottom .header__main-list {
     margin-top: 7.1022727273vw;
@@ -1801,7 +1877,6 @@
   }
   .dropdown .header__wrapper-bottom .header__main-list__item:nth-child(2) {
     margin-right: 6.3920454545vw;
-    position: relative;
   }
   .dropdown .header__wrapper-bottom .header__main-list__item:nth-child(2) a::after {
     top: 0;
@@ -2081,11 +2156,10 @@
   .services .gallery__content {
     height: 7.3529411765vw;
     padding: 0 8.0882352941vw 0 3.6764705882vw;
-    display: flex;
-    align-items: center;
     background: url("../images/icons/white-button.png") no-repeat right 3.6764705882vw center;
   }
   .services .gallery__content a {
+    text-decoration: none;
     height: 5.5147058824vw;
     width: 34.7426470588vw;
     font-size: 2.9411764706vw;
@@ -2406,6 +2480,7 @@
   .dropdown.fixed {
     left: 0;
     top: 0;
+    opacity: 0.9;
   }
   .dropdown .header__wrapper-bottom .header__main-list {
     margin-top: 9.1911764706vw;
